Remove width from staff bios, should fix text collision bug on smaller displays.

--- a/css/site.css
+++ b/css/site.css
@@ -214,7 +214,6 @@ p {
 }
 
 .people .span4 p {
-	width: 300px;
 	margin: 0 auto;
 }
 
